test/mutation_analysis/s0055_jump_game/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0055_jump_game/hafis/starchat/mutants/2/Solution.java:19: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
